kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver
  labels:
    app: goserver
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 8082
  selector:
    app: goserver
    tier: frontend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  template:
    metadata:
      labels:
        app: goserver
        tier: frontend
    spec:
      containers:
      - image: divyanshm/goserver:v1.11
        name: goserver
        command: ["/app/main", "-redis", "goserver-redis:6379"]
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: goserver-redis
  labels:
    app: goserver
spec:
  ports:
    - port: 6379
  selector:
    app: goserver
    tier: redis
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: goserver-redis
  labels:
    app: goserver
spec:
  template:
    metadata:
      labels:
        app: goserver
        tier: redis
    spec:
      containers:
      - image: redis:3-alpine
        name: redis
        ports:
        - containerPort: 6379
          name: redis
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: goserver
  name: goserver
  namespace: default
spec:
  backend:
    serviceName: goserver
    servicePort: 8082
